[FIX] display on safari issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,11 +27,11 @@ ul li{
   text-decoration: none;
 }
 .btn{
-  width: 15rem;
   border:#FF5368 solid 0.375rem;
   border-radius: 0.375rem;
   padding-top: 0.85rem;
   padding-bottom: 0.75rem;
+  margin: auto;
 }
 .btn:hover{
   cursor: pointer;
@@ -41,8 +41,9 @@ ul li{
   font-size: 1.125rem;
 }
 .btn_info{
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
+  margin: auto;
+  /*margin-left: 0.625rem;
+  margin-right: 0.625rem;*/
   padding-top: 1.9rem;
   padding-bottom: 1.7rem;
   font-size: 1.5rem;
@@ -85,6 +86,10 @@ ul li{
   margin: auto;
   width: 43rem;
 }
+.grid_btn ul li{
+  width: 33.333333%;
+  text-align: center
+}
 .grid_btn_item{
   display: inline-block;
 }
@@ -106,6 +111,9 @@ ul li{
   .grid_btn ul{
     width: auto;
     height: 15.5rem;
+  }
+  .grid_btn ul li{
+    width: 100%;
   }
   .grid_btn_item{width: 100%;}
   .btn,.btn_info{margin: auto;}
